# photo-viewer

./: README.md  package-lock.json  package.json
src/: App.module.css  App.tsx  index.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  thumbnail.rs
src/components/: Gallery.module.css  Gallery.tsx  GalleryImage.tsx  GalleryImages.tsx  LoadMoreHint.tsx
src/core/: base64.ts  file_system.ts  helpers.ts
